# repro-sqlx-rocket-anyhow-no-backtrace

./: Cargo.toml
src/: main.rs
