[package]
name = "repro-rocket-anyhow-no-backtrace"
version = "0.1.0"
authors = ["Farseen <zah4n5dz@anonaddy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
sqlx = { version = "0.5.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.5.0", features = ["full"] }
